# Data_Engineering

./: README.md  pyproject.toml  requetes_SQL_1ere_Partie.sql  requetes_SQL_2eme_Partie.sql
output/: drug_mentions_graph.json
src/: analysis.py  config.py  data_cleaning.py  data_loader.py  graph_builder.py  pipeline.py
tests/: test_json_validity.py
