[tool.poetry]
name = "python-test-de"
version = "0.1.0"
description = "data pipeline that produces a JSON file"
authors = [
    "MarkoBrie <marko.briesemann@gmail.com>"
]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=2.2.3,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

